Add CI pipeline and codecov; Linting and formatting

--- a/examples/example_build_model.ipynb
+++ b/examples/example_build_model.ipynb
@@ -44,15 +44,11 @@
     }
    ],
    "source": [
-    "from atmod import (\n",
-    "    AtlansParameters,\n",
-    "    build_atlantis_model,\n",
-    "    read_ahn\n",
-    ")\n",
-    "from atmod.bro_models import BroBodemKaart, GeoTop, Lithology\n",
-    "from atmod.build_forcings import surcharge_like\n",
     "from pathlib import Path\n",
     "\n",
+    "from atmod import AtlansParameters, build_atlantis_model, read_ahn\n",
+    "from atmod.bro_models import BroBodemKaart, GeoTop, Lithology\n",
+    "from atmod.build_forcings import surcharge_like\n",
     "\n",
     "bbox  = (127_000, 448_000, 132_000, 453_000) # xmin, ymin, xmax, ymax of the example area\n",
     "\n",
