--- a/examples/tgg_sri_workshop.ipynb
+++ b/examples/tgg_sri_workshop.ipynb
@@ -16,17 +16,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import contextily as ctx # for background maps\n",
+    "import contextily as ctx  # for background maps\n",
     "import geopandas as gpd\n",
     "from matplotlib import pyplot as plt\n",
-    "from shapely.geometry import box, LineString\n",
+    "from shapely.geometry import LineString, box\n",
     "\n",
     "## local imports for GeoTOP examples\n",
-    "from atmod.bro_models import (\n",
-    "    GeoTop,\n",
-    "    Lithology,\n",
-    "    StratGeoTop\n",
-    ")"
+    "from atmod.bro_models import GeoTop, Lithology, StratGeoTop"
    ]
   },
   {
